metacatui/src/main/webapp/css/metacatui-common.css
/* ... */
.annotator-viewer .annotator-controls{
	display: none;
}
.annotation-flag.btn,
.annotation-delete.btn {
    border-width: 0px;
    margin-bottom: 0px;
    margin-right: 10px;
    margin-left: -7px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    border: 0px;
    padding: 6px;
    font-size: 1em;
    line-height: 0em;
    margin-top: -3px;
}
.annotation-flag.btn:hover,
.annotation-delete.btn:hover{
	border-width: 0px;
}
.annotation-delete.btn-warning,
.annotation-flag.btn-warning {
    background-image: inherit;
    background-color: #da4f49;
    color: white;
}
.annotation-delete.btn-warning:hover,
.annotation-flag.btn-warning:hover{
	background-color: #f73f3f;
}
.annotation-flag.btn-success {
    background-color: #5bb75b;
    color: #FFF;
}
.annotation-flag.btn-success:hover{
	background-color: #66ce66;	
}
.annotation-viewer-container .warning{
	color: #d00000;
}
.annotator-editor .annotator-controls{
	background-image: none;
    background-color: #FFF;
    padding-top: 10px;
}
.annotator-editor .annotator-checkbox,
.annotator-editor #annotator-field-4,
.annotator-editor .annotator-item label[for="annotator-field-4"]{
	display: none !important;
}
.ui-autocomplete.annotator{
	z-index: 9999;
}
.popover-title {
    text-transform: capitalize;
}
.annotation-viewer-container .concept a{
	white-space: pre-wrap;
}
.annotation.tag.warning {
    background-color: #999;
    color: #DDD;
}

/** Hide the search when in the dropdown menu **/
.dropdown-menu .ncboAutocomplete {
	display: none;
}

#bioportal-tree-annotator {
    max-height: 200px;
    overflow-y: scroll;
}
#bioportal-tree-label .annotation.tag.btn {
    margin-left: 10px;
    margin-top: -20px;
    margin-bottom: 10px;
}

.ncboAutocomplete .ui-menu .ui-menu-item a.ui-state-focus, .ncboAutocomplete .ui-menu .ui-menu-item a.ui-state-hover, .ncboAutocomplete .ui-menu .ui-menu-item a.ui-state-active, .ui-menu-item a {
    text-shadow: none;
    font-size: 1.3em;
    width: 100%;
}
/** hide the tree until we have it where we want it **/
#bioportal-tree {
	display: none;
}
.dropdown-menu #bioportal-tree {
	display: block;
}
#bioportal-popover #bioportal-tree {
	display: block;
}
#sidebar .input-append  {
	font-size: 1em;
}
#bioportal-popover .popover{
	max-width: 500px;
	width: 500px;
	
}
#bioportal-popover .popover-content{
	width: 95%;
}
#bioportal-popover #bioportal-tree{
	overflow-y: scroll;
    max-height: 300px;
    overflow-x: visible;
}

#jumpUp {
	float: right;
}
#resetTree {
	float: right;
}
/****************************************** 
* Images, Maps, and Media
********************************************/
.thumbnail{
	height: auto;
	width: 350px;
	padding: 20px;
	margin-bottom: 20px;
}
.entitydetails .thumbnail{
	margin-left: 180px;
	margin-top: 40px;
	padding: 20px;
	width: 350px;
}
.entitydetails .thumbnail.pdf{
	width: 500px;
}
.entitydetails .thumbnail.pdf .zoom-in{
	width: 500px;
    display: block;
    height: 2em;
    background-color: rgba(0,0,0,0.5);
    color: white;
    font-weight: normal;
    text-align: center;
    line-height: 2em;
}
.thumbnail  img{
	min-width: 100%;
	height: auto;
}
.thumbnail.map{
	width: auto;
	max-width: 700px;
}
.control-group ~ .thumbnail{
	margin-left: 180px;
}
img[src*="gstatic.com/"].georegion-map, 
img[src*="googleapis.com/"].georegion-map{
	max-width: 100%;
}
.figure{
	margin-top: 20px;
	margin-bottom: 20px;
	max-width: 100%;
	margin-right: auto;
	margin-left: auto;
}
.media {
  margin-top: 15px;
}
.media:first-child {
  margin-top: 0;
}
.media,
.media-body {
  overflow: hidden;
  zoom: 1;
}
.media-body {
  width: 10000px;
}
.media-body h5 a{
	color: inherit;	
}
.media-object {
  display: block;
  max-width: inherit;
}
.media-object.img-thumbnail {
  max-width: none;
}
.media-right,
.media > .pull-right {
  padding-left: 10px;
}
.media-left,
.media > .pull-left {
  padding-right: 10px;
}
.media-left,
.media-right,
.media-body {
  display: table-cell;
  vertical-align: top;
}
.media-middle {
  vertical-align: middle;
}
.media-bottom {
  vertical-align: bottom;
}
.media-heading {
  margin-top: 0;
  margin-bottom: 5px;
}
.media-list {
  padding-left: 0;
  list-style: none;
}
/****************************************** 
* Download / Resource Map contents table
********************************************/
#downloadContents .controls-well{
	overflow-x: scroll;
	-webkit-transform: translate3d(0,0,0); 
}
.download-contents{
	float: none;
	clear: both;
}
.download-contents ~ .download-contents {
    margin-top: 20px;
}
table.download-contents {
	width: 100%;
	margin-bottom: 0px;
}
table.download-contents.nested{
	margin-left: 5%;
	width: 95%;
}
.download-contents td{
	overflow-wrap: break-word;
	vertical-align: middle; /*Oh tables, good for one thing...*/
}
.download-contents th{
	font-weight: normal;
}
.table-header.subtle{
    font-size: .9em;
    line-height: 0.8em;
    border-top: 0px;
}
.table .table-header{
	border-bottom: 1px solid #8DA2AA;
}
.table-header-link{
	font-weight: normal;	
}
.table tr > th .tooltip{
	font-weight: normal;
}
.download-contents .btn .icon,
.download-contents .preview .icon{
	font-size: 1em;
	margin-left: 5px;
}
.download-contents a[href="#tools/eml"]{
	color: inherit;
}
.download .btn i{
	margin-left: 5px;
}
.download-contents .format-type{
	text-align: left;
}   
.download-contents .file-type i {
  color: #999;
  margin-left: 5px;
} 
.download-contents .ellipsis{
	display: block;
	max-width: 250px;
}
table.download-contents .name{
	min-width: 325px;
	max-width: 325px;
}
table.download-contents .btn-container,
table.download-contents .btn-container .btn{
	width: 115px;
} 
.download-contents.service .btn-container .btn{
	width: 135px;
}
.download-contents.service .btn-container .btn span {
    float: left;
    width: 80%;
    width: calc(100% - 20px);
}

.download-contents.service .btn-container .btn .icon {
    float: right;
    margin-top: 1em;
}
.download-contents th .btn-primary{
	min-width: 120px;
}
/* ... */

